--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@
     color: red;
 }
 
+.title4 {
+    text-align: center;
+    color: red;
+}
+
 .main1 {
 	width: 300px; 
     background: #fc0; 
